# BuildSystems

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
BAZEL/01_Minimal/: BUILD.bazel
BAZEL/02_Build_Simple_Target/lib_dynamic/: BUILD.bazel  CMakeLists.txt
BAZEL/02_Build_Simple_Target/lib_static/: BUILD.bazel  CMakeLists.txt  add.cpp  mul.cpp
BAZEL/02_Build_Simple_Target/src/: BUILD.bazel  main.cpp
BAZEL/03_Variable/: BUILD.bazel  functions.bzl
BAZEL/04_Controlling_Compilation/: BUILD.bazel  main.cpp  operations.cpp  operations.hpp
BAZEL/06_Controlling_compile_flags/: BUILD.bazel
BAZEL/06_Controlling_compile_flags/includes/: circle.hpp  square.hpp
BAZEL/06_Controlling_compile_flags/src/: circle.cpp  main.cpp  square.cpp
BAZEL/07_StandardFlag/: BUILD.bazel  README.md
BAZEL/07_StandardFlag/include/: Animal.hpp  Cat.hpp  Dog.hpp  Factory.hpp
BAZEL/07_StandardFlag/src/: Animal.cpp  Cat.cpp  Dog.cpp  animal-farm.cpp
BAZEL/08_DetectingPython/: README.md  hello.py
BAZEL/09_Python_build/: BUILD.bazel  greet.py  main.py
BAZEL/10_genrule/: BUILD.bazel
BAZEL/nanobind_11/: BUILD.bazel  test_math.py
BAZEL/nanobind_11/my_lib/: BUILD.bazel  math_ext.cc
CMAKE/01_Mimimal/: CMakeLists.txt
CMAKE/01_Minimal/: main.cpp
CMAKE/02_Build_Simple_Target/: CMakeLists.txt
CMAKE/02_Build_Simple_Target/lib_dynamic/: dynamic.cpp
CMAKE/02_Build_Simple_Target/lib_static/: operations.h
CMAKE/02_Build_Simple_Target/src/: CMakeLists.txt
CMAKE/03_Variable/: CMakeLists.txt
CMAKE/04_Controlling_Compilation/: CMakeLists.txt  main.cpp  operations.cpp
CMAKE/05_BuildType/: CMakeLists.txt
CMAKE/06_Controlling_compile_flags/: CMakeLists.txt
CMAKE/06_Controlling_compile_flags/includes/: circle.hpp
CMAKE/06_Controlling_compile_flags/src/: circle.cpp  main.cpp  square.cpp
CMAKE/07_StandardFlag/: CMakeLists.txt  README.md
CMAKE/07_StandardFlag/src/: animal-farm.cpp
CMAKE/08_DetectingPython/: CMakeLists.txt  README.md
dot_files/04_Controlling_Compilation/: bazel_dynamic.dot  cmake.dot  cmake.dot.build_simple_target  cmake.dot.conditional_main  cmake.dot.dynamiclib  cmake.dot.dynamiclib.dependers  cmake.dot.shared_lib.dependers  cmake.dot.staticlib.dependers
other/: cmake_execute_process.md  cmake_module_list.txt  cmake_python.md  cmake_sys_info.txt
py_utils/: create_symlink.py
