cmake_minimum_required(VERSION 3.27)
project(MyApp LANGUAGES C CXX)

add_subdirectory(CMAKE/01_Minimal)
add_subdirectory(CMAKE/02_Build_Simple_Target)
add_subdirectory(CMAKE/03_Variable)
add_subdirectory(CMAKE/04_Controlling_Compilation)
add_subdirectory(CMAKE/05_BuildType)
add_subdirectory(CMAKE/06_Controlling_compile_flags)
add_subdirectory(CMAKE/07_StandardFlag)
add_subdirectory(CMAKE/08_DetectingPython)