cc_library(
    name = "animallib",
    srcs = [
        "src/Animal.cpp",
        "src/Cat.cpp",
        "src/Dog.cpp",
    ],
    hdrs = [
        "include/Animal.hpp",
        "include/Cat.hpp",
        "include/Dog.hpp",
        "include/Factory.hpp",
    ],
    includes = ["include"],
    linkstatic = False,
    tags = ["07_sf"],
    visibility = ["//visibility:private"],
)

cc_binary(
    name = "07_main",
    deps = [":animallib"],
    srcs = ["src/animal-farm.cpp"],
    tags = ["07_sf"],
    visibility = ["//visibility:private"],
)
